--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
 	<title>D Witteveen</title>
 	<link rel="icon" type="image/png" href="">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,900&display=swap" rel="stylesheet">
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
+
+	<div id="cursor"></div>
 
 	<section id="hero" class="container">
 		<p class="main">hello,</p>
@@ -20,7 +23,7 @@
 
 
 	<section id="about" class="container">
-		<p>
+		<p class="hover-target">
 			I’m an enthusiastic and motivated Javascript developer with a passion for creating new things. My background has taught me to adapt to high-pressure situations and tight deadlines whilst remaining both organized and with good performance, as well as to work both in a team and independent. I’m committed, creative, passionate about design and UX and always eager to learn something new.
 		</p>
 
@@ -32,6 +35,7 @@
 				<li><span class="color_3">commited</span></li>
 				<li><span class="color_4">problem solver</span></li>
 			</ul>
+			<span id="typed"></span>
 		</div>
 	</section>
 
