--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>D Witteveen</title>
 	<link rel="icon" type="image/png" href="">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,900&display=swap" rel="stylesheet">
-	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script src="https://kit.fontawesome.com/36e279864a.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
@@ -20,10 +20,11 @@
 			<p class="small">Junior Full Stack Web Developer</p>
 		</div>
 	</section>
+	<hr>
 
 
 	<section id="about" class="container">
-		<p class="hover-target">
+		<p class="hover-target showcase-bottom">
 			I’m an enthusiastic and motivated Javascript developer with a passion for creating new things. My background has taught me to adapt to high-pressure situations and tight deadlines whilst remaining both organized and with good performance, as well as to work both in a team and independent. I’m committed, creative, passionate about design and UX and always eager to learn something new.
 		</p>
 
@@ -38,24 +39,83 @@
 			<span id="typed"></span>
 		</div>
 	</section>
-
+	<hr>
 
 	<section id="projects">
 
 	</section>
+	<hr>
+
+	<section id="timeline" class="timeline">
+		<h3>Projects</h3>
+
+		<div class="controls-wrapper">
+			<button class="control-prev hover-target"><i class="fas fa-chevron-left"></i></button>
+			<button class="control-next hover-target"><i class="fas fa-chevron-right"></i></button>
+		</div>
+
+		<div class="indicator">
+			<div class="current-wrapper"></div> 
+			/ <div class="out-of"></div>
+		</div>
+
+
+
+		<div class="red-line"></div>
+
+		<div class="projects-wrapper">
+			<!-- Maisha -->
+			<div class="project">
+				<div class="img-wrapper mobile">
+					<img class="" src="./img/mytin-mockup.jpg">
+				</div>
+				<!-- style="background-image: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4))" -->
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur necessitatibus unde non eveniet doloribus ducimus facere officia veniam, tenetur accusantium pariatur placeat incidunt voluptate distinctio dolore adipisci. Optio, molestiae?</p>
+			</div>
+
+			<!-- Mytinerary -->
+			<div class="project">
+				<div class="img-wrapper desktop">
+					<img class="" src="./img/maisha-mockup.jpg">
+				</div>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error aspernatur necessitatibus unde non eveniet doloribus ducimus facere officia veniam, tenetur accusantium pariatur placeat incidunt voluptate distinctio dolore adipisci. Optio, molestiae?</p>
+			</div>
+
+			<!-- TGIF -->
+			<div class="project">
+				<div class="img-wrapper desktop">
+					<img class="" src="./img/tgif-mockup.jpg">
+				</div>
+				<p>Lorem i eveniet doloribus ducimus stinctio dolore adipisci. Optio, molestiae?</p>
+			</div>
+
+			<div class="project">
+				<div class="img-wrapper desktop">
+					<img class="" src="./img/nysl-mockup.jpg">
+				</div>
+				<p>Lorem ipsum dolor siatur placeat incidunt voluptate distinctio dolore adipisci. Optio, molestiae?</p>
+			</div>
+		</div>
+
+	</section>
+
 
 
 	<section id="skills">
 
 	</section>
+	<hr>
 
 
 	<section id="contact">
 
 	</section>
+	<hr>
 
 	<!-- <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script> -->
 	<!-- <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script> -->
+	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 	<script src="./js/main.js"></script>
 </body>
 </html>
