feat: scroll-snap to each section

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	
 	<nav class="navbar">
 		<ul>
-			<a class="nav-item active hover-target" href="#home">Home</a></li>
+			<a class="nav-item active hover-target" href="#hello">Hello</a></li>
 			<a class="nav-item hover-target" href="#about">About</a></li>
 			<a class="nav-item hover-target" href="#projects">Projects</a></li>
-			<a class="nav-item hover-target" href="#skills">Skills</a></li>
+			<!-- <a class="nav-item hover-target" href="#skills">Skills</a></li> -->
 			<a class="nav-item hover-target" href="#contact">Contact</a></li>
 		</ul>
 	</nav>
@@ -46,7 +46,7 @@
 		</ul>
 	</div>
 
-	<section id="home" class="container">
+	<section id="hello" class="container">
 		<div class="section-content">
 			<p class="font_main sub-section_1">hello,</p>
 			<div class="sub-section_2">
@@ -56,7 +56,7 @@
 		</div>
 	</section>
 
-	<hr>
+	<!-- <hr> -->
 
 	<section id="about" class="container">
 		<div class="section-content">
@@ -78,10 +78,9 @@
 			</div>
 		</div>
 	</section>
-	<hr>
+	<!-- <hr> -->
 
 	<section id="projects">
-		<h3>Projects</h3>
 
 		<div class="red-line"></div>
 
@@ -110,7 +109,7 @@
 				<div class="project-info">
 					<p>Progressive Web App (PWA) that allows users to search and share trip itineraries.</p>
 					<ul>
-						<li>Front-end stack: | React | Redux | JavaScript | REST API| HTML | CSS</li>
+						<li>Front-end stack: | React | Redux | JavaScript | REST API | HTML | CSS</li>
 						<li>Back-end stack: MERN – | MongoDB | Mongoose | Express | Node.js</li>
 					</ul>
 					<h3 class="font_main">Mytinerary</h3>
@@ -123,7 +122,7 @@
 					<p>Responsive website for Maish Roots NGO</p>
 					<ul>
 						<li>Design and development</li>
-						<li>Stack: Javascript | jQuery | CSS | HTML</li>
+						<li>Stack: | Javascript | CSS | HTML</li>
 						<li>Payment processing implementation with Stripe</li>
 					</ul>
 					<h3 class="font_main">Maisha Roots</h3>
@@ -155,7 +154,6 @@
 				<div class="project-info">
 					<p>Responsive web page to follow a kids’ football league</p>
 					<ul>
-						<li>Stack: | Vue | JavaScript | Bootstrap | REST API | HTML | CSS</li>
 						<li>Stack: | JavaScript | HTML | CSS</li>
 					</ul>
 					<h3 class="font_main">NYSL</h3>
@@ -183,9 +181,9 @@
 		</form>
 
 	</section>
-	<hr>
+	<!-- <hr> -->
 
-	<!-- <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script> -->
+
 	<script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
